# TardisDB

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CodeGen.cpp  CodeGen.hpp  Database.cpp  Database.hpp  Dockerfile  Hashtable.cpp  Hashtable.hpp  InformationUnit.cpp  InformationUnit.hpp  LegacyTypes.cpp  LegacyTypes.hpp  MemoryPool.cpp  MemoryPool.hpp  PhiNode.hpp  Readme  Readme.md  StaticHashtable.cpp  StaticHashtable.hpp  TypeCache.hpp  Vector.cpp  Vector.hpp  exceptions.hpp  loader.cpp  loader.hpp  main.cpp  server.cpp  sql.cpp  utils.cpp  utils.hpp
algebra/: translation.cpp  translation.hpp
algebra/logical/: expressions.cpp  expressions.hpp  operators.cpp  operators.hpp
algebra/physical/: Delete.cpp  Delete.hpp  GroupBy.cpp  GroupBy.hpp  HashJoin.cpp  HashJoin.hpp  IndexJoin.cpp  IndexJoin.hpp  Insert.cpp  Insert.hpp  Map.hpp  Operator.cpp  Operator.hpp  Print.cpp  Print.hpp  Select.cpp  Select.hpp  TableScan.cpp  TableScan.hpp  TupleStream.cpp  TupleStream.hpp  Update.cpp  Update.hpp  expressions.hpp  operators.hpp
benchmark/: generateLoadStatements.sh  generateQueryStatements.sh  random.cpp  random.hpp  semanticalBench.cpp  semanticalBenchmark.sh  semanticalBenchmarkUnversionized.sh
benchmark/benchmarkQueries/: b1d_statements_10_2087.txt  b1d_statements_23910821_23927983_new.txt  b1d_statements_30227_30303.txt  b1jm_statements_10_2087.txt  b1jm_statements_23910821_23927983.txt  b1jm_statements_30227_30303.txt  b1m_statements_10_2087.txt  b1m_statements_23910821_23927983.txt  b1m_statements_23910821_23927983_new.txt  b1m_statements_30227_30303.txt  b1s_statements_10_2087.txt  b1s_statements_23910821_23927983.txt  b1s_statements_23910821_23927983_new.txt  b1s_statements_30227_30303.txt  b1u_statements_10_2087.txt  b1u_statements_23910821_23927983_new.txt  b1u_statements_30227_30303.txt  b2d_statements_10_2087.txt  b2d_statements_23910821_23927983.txt  b2d_statements_30227_30303.txt  b2jm_statements_10_2087.txt  b2jm_statements_23910821_23927983.txt  b2jm_statements_30227_30303.txt  b2m_statements_10_2087.txt  b2m_statements_23910821_23927983.txt  b2m_statements_23910821_23927983_new.txt  b2m_statements_30227_30303.txt  b2s_statements_10_2087.txt  b2s_statements_23910821_23927983.txt  b2s_statements_23910821_23927983_new.txt  b2s_statements_30227_30303.txt  b2u_statements_10_2087.txt  b2u_statements_23910821_23927983.txt  b2u_statements_30227_30303.txt  bi_statements_10_2087.txt  bi_statements_23910821_23927983.txt  bi_statements_30227_30303.txt  md_statements_10_2087.txt  md_statements_23910821_23927983.txt  md_statements_30227_30303.txt  (+18 more)
benchmark/static/tpch/: CMakeLists.txt  common.cpp  common.hpp  cpu.cpp  gpu.cu
benchmarkResults/: loadTimes.txt  results_1435976b2e565765a2d12a8f864e71d17a153c1e.csv  results_16e8d0a0c970153d182393964c923f16d644b321.csv  results_189657c119aed63dacbc9c0559557a52f49ea898.csv  results_2afc1decf5dc53bc8cabe32d5d50394ce8a2a8e3.csv  results_43dcf3de72dfd48a7a42945d50a6caaa13b0a405.csv  results_4c07dd03ddd64580d2fc4ac401cd303504c32469.csv  results_5e0e9c730f652d1a9b09bfa9b3a7aaa7632570c7.csv  results_647490fc67023bd639187db435d295002f1bf9ba.csv  results_92c325b416b97407620d70b5591d68b61c694b34.csv  results_9e4f2f3f52ea51f57c010a2ac97796ec742d89b4.csv  results_ae324dd2fc95850866e76820cf440947b61eea2e.csv  results_e059deb861a5300cd264ccea9fe258272fc36de4.csv  results_unv_e059deb861a5300cd264ccea9fe258272fc36de4.csv
codegen/: CodeGen.cpp  CodeGen.hpp  CodeGen.tcc  PhiNode.hpp  TypeCache.hpp
docker/: Dockerfile
foundations/: Database.cpp  Database.hpp  Hashtable.cpp  Hashtable.hpp  IUFactory.cpp  IUFactory.hpp  InformationUnit.hpp  LegacyTypes.cpp  LegacyTypes.hpp  MemoryPool.cpp  MemoryPool.hpp  QueryContext.cpp  QueryContext.hpp  StaticHashtable.cpp  StaticHashtable.hpp  StringPool.cpp  StringPool.hpp  Vector.cpp  Vector.hpp  exceptions.hpp  loader.cpp  loader.hpp  version_management.cpp  version_management.hpp
include/tardisdb/queryCompiler/: QueryContext.hpp  queryCompiler.hpp
include/tardisdb/queryExecutor/: queryExecutor.hpp  (+1 more)
native/sql/: Register.cpp  Register.hpp  SqlTuple.cpp  SqlTuple.hpp  SqlValues.cpp  SqlValues.hpp
queries/: arithmetic.cpp  common.cpp  common.hpp  queries.cpp  queries.hpp  tpch1.cpp  versioned.cpp
query_compiler/: compiler.cpp  compiler.hpp  queryparser.cpp  queryparser.hpp  semantic_analysis.cpp  semantic_analysis.hpp
schema_parser/: CMakeLists.txt  Parser.cpp  Parser.hpp  Schema.cpp  Schema.hpp  Types.hpp  generator.cpp  generator.hpp  main.cpp
schemas/: schema.sql  tpcc.sql  tpch-nullable.sql  tpch.sql  versioning.sql
semanticAnalysis/: JoinGraph.cpp  JoinGraph.hpp  Register.cpp  Register.hpp  SQLParser.cpp  SQLParser.hpp  SQLToOperator.cpp  SQLToOperator.hpp  SemanticAnalyser.cpp  SemanticAnalyser.hpp
sql/: SqlOperators.cpp  SqlOperators.hpp  SqlTuple.cpp  SqlTuple.hpp  SqlType.cpp  SqlType.hpp  SqlUtils.cpp  SqlUtils.hpp  SqlUtils.tcc  SqlValues.cpp  SqlValues.hpp  ValueTranslator.cpp  ValueTranslator.hpp
standalone_tests/: CMakeLists.txt  phi_test.cpp
test/: codegen_test.cpp  expression_test.cpp  if_test.cpp  interop_test.cpp  join_test.cpp  local.cmake  loop_test.cpp  phi_test.cpp  query_test.cpp  sqlparser_test.cpp  tester.cpp  types_test.cpp
tests/: codegen_test.cpp  expression_test.cpp  groupby_test.cpp  if_test.cpp  interop_test.cpp  join_test.cpp  loop_test.cpp  query_test.cpp  tests.cpp  tests.hpp  types_test.cpp
tools/queryCompiler/: QueryContext.cpp  local.cmake  queryCompiler.cpp
tools/queryExecutor/: local.cmake  queryExecutor.cpp
tools/semanticalAnalyser/: BranchAnalyser.cpp  CopyTableAnalyser.cpp  CreateBranchAnalyser.cpp  CreateTableAnalyser.cpp  DeleteAnalyser.cpp  DumpTableAnalyser.cpp  IUFactory.cpp  InsertAnalyser.cpp  JoinGraph.cpp  SelectAnalyser.cpp  SemanticAnalyser.cpp  SemanticalVerifier.cpp  UpdateAnalyser.cpp  local.cmake
tools/sqlParser/: SQLParser.cpp  Tokenizer.cpp  local.cmake
tools/wikiParser/: WikiParser.cpp  local.cmake  wikic.cpp
utils/: general.cpp  general.hpp  hashing.cpp  hashing.hpp  llvm.hpp  optimistic_lock.hpp  tagged_ptr.hpp
(+13 files in other folders)
